# Alterway

./: Cargo.toml  README.md
config/: blocked_domains.txt  proxy.toml
src/: config.rs  filter.rs  handler.rs  logger.rs  main.rs  parser.rs
